<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.mta.apo.NavBarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:weightSum="3"
        android:background="@color/colorNavBarBG">

        <ImageButton
            android:id="@+id/btnRecentSearches"
            android:contentDescription="@string/btnRecentSearchesDsc"
            android:src="@drawable/ic_restore_black_24dp"
            style="@style/NavBarButtons"/>

        <ImageButton
            android:id="@+id/btnCapture"
            android:contentDescription="@string/btnCaptureDsc"
            android:src="@drawable/ic_camera_black_24dp"
            style="@style/NavBarButtons"/>

        <ImageButton
            android:id="@+id/btnSearchForm"
            android:contentDescription="@string/btnSearchFormDsc"
            android:src="@drawable/ic_search_black_24dp"
            style="@style/NavBarButtons"/>

    </LinearLayout>

</FrameLayout>
