<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.mta.apo.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <com.otaliastudios.cameraview.CameraView
            android:id="@+id/camera"
            android:keepScreenOn="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            app:cameraFacing="back"
            app:cameraSessionType="picture"
            app:cameraJpegQuality="100"
            />

        <fragment
            android:name="io.mta.apo.NavBarFragment"
            android:id="@+id/navBar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
